fix: overflow

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -41,7 +41,7 @@
 
 .slide-routes {
     width: 100%;
-    overflow: auto!important;
+    overflow-y: auto!important;
 
     .item {
         width: 100%;
